syntax="proto2";

package yamcs.protobuf.commanding;

option java_package = "org.yamcs.protobuf";
option java_outer_classname = "CommandHistoryServiceProto";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

import "yamcs/api/annotations.proto";
import "yamcs/protobuf/commanding/commanding.proto";

service CommandHistoryApi {

  // List commands
  rpc ListCommands(ListCommandsRequest) returns (ListCommandsResponse) {
    option (yamcs.api.route) = {
      get: "/api/archive/{instance}/commands"
    };
  }
  
  // Get a command
  rpc GetCommand(GetCommandRequest) returns (CommandHistoryEntry) {
    option (yamcs.api.route) = {
      get: "/api/archive/{instance}/commands/{id}"
    };
  }
  
  // Streams back commands
  rpc StreamCommands(StreamCommandsRequest) returns (stream CommandHistoryEntry) {
    option (yamcs.api.route) = {
      post: "/api/stream-archive/{instance}:streamCommands"
      body: "*"
    };
  }
  
  // Receive updates on issued commands
  rpc SubscribeCommands(SubscribeCommandsRequest) returns (stream CommandHistoryEntry) {
    option (yamcs.api.websocket) = {
      topic: "commands"
    };
  }
}

message ListCommandsRequest {
  optional string instance = 1;
  optional int64 pos = 2;
  optional int32 limit = 3;
  optional string order = 4;
  optional string q = 5;
  optional string next = 6;
  optional google.protobuf.Timestamp start = 7;
  optional google.protobuf.Timestamp stop = 8;
}

message ListCommandsResponse {
  repeated CommandHistoryEntry entry = 1;
  optional string continuationToken = 2;
}

message GetCommandRequest {
  optional string instance = 1;
  optional string id = 2;
}

message StreamCommandsRequest {
  optional string instance = 1;
  optional google.protobuf.Timestamp start = 2;
  optional google.protobuf.Timestamp stop = 3;
  repeated string name = 4;
}

message SubscribeCommandsRequest {
  optional string instance = 1;
  optional string processor = 2;
  optional bool ignorePastCommands = 3;
}
